--- a/src/TfxMiniCasher.Domain.Logic/TfxMiniCasher.Domain.Logic.csproj
+++ b/src/TfxMiniCasher.Domain.Logic/TfxMiniCasher.Domain.Logic.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Xyz.TForce.MiniCasher.CrossCutting</RootNamespace>
+    <RootNamespace>Xyz.TForce.MiniCasher.Domain.Logic</RootNamespace>
     <Authors>T-Force Xyz</Authors>
     <Company>T-Force Xyz</Company>
     <Copyright>T-Force Xyz</Copyright>
