init application: WebHost

--- a/src/TfxMiniCasherWebHost/TfxMiniCasherWebHost.csproj
+++ b/src/TfxMiniCasherWebHost/TfxMiniCasherWebHost.csproj
@@ -14,4 +14,16 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="TfxDependencyInjection" Version="1.0.0" />
+    <PackageReference Include="TfxDependencyInjection.AutofacAdapter" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
