--- a/src/TfxMiniCasher.Data.Migrations/TfxMiniCasher.Data.Migrations.csproj
+++ b/src/TfxMiniCasher.Data.Migrations/TfxMiniCasher.Data.Migrations.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>Xyz.TForce.MiniCasher.Data.Migrations</RootNamespace>
     <Authors>T-Force Xyz</Authors>
     <Company>T-Force Xyz</Company>
@@ -28,6 +28,14 @@
   
   <ItemGroup>
     <ProjectReference Include="..\TfxMiniCasher.Data.Repositories\TfxMiniCasher.Data.Repositories.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="scripts\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="scripts\**" />
   </ItemGroup>
 
 </Project>
