bootstrap main classes | TFX-112 [MINICASHER] Bootstrap accounting domains

--- a/src/TfxMiniCasher.Data.Repositories/TfxMiniCasher.Data.Repositories.csproj
+++ b/src/TfxMiniCasher.Data.Repositories/TfxMiniCasher.Data.Repositories.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TfxData.EntityFrameworkAdapter\TfxData.EntityFrameworkAdapter.csproj" />
+    <ProjectReference Include="..\TfxMiniCasher.Data.Contracts\TfxMiniCasher.Data.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
