--- a/src/TfxMiniCasher.Application.Logic/TfxMiniCasher.Application.Logic.csproj
+++ b/src/TfxMiniCasher.Application.Logic/TfxMiniCasher.Application.Logic.csproj
@@ -13,4 +13,8 @@
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TfxMiniCasher.Application.Contracts\TfxMiniCasher.Application.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
