--- a/src/TfxMiniCasher.WebMvc/TfxMiniCasher.WebMvc.csproj
+++ b/src/TfxMiniCasher.WebMvc/TfxMiniCasher.WebMvc.csproj
@@ -12,5 +12,11 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="TfxAspNet" Version="1.0.0" />
+  </ItemGroup>
 
 </Project>
