--- a/src/TfxMiniCasher.Application.Logic/TfxMiniCasher.Application.Logic.csproj
+++ b/src/TfxMiniCasher.Application.Logic/TfxMiniCasher.Application.Logic.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="TfxDependencyInjection" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TfxMiniCasher.Application.Contracts\TfxMiniCasher.Application.Contracts.csproj" />
   </ItemGroup>
 
