--- a/src/TfxArchetypes.DomainDrivenDevelopment/TfxArchetypes.DomainDrivenDevelopment.csproj
+++ b/src/TfxArchetypes.DomainDrivenDevelopment/TfxArchetypes.DomainDrivenDevelopment.csproj
@@ -28,10 +28,12 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
     <PackageReference Include="MediatR" Version="5.1.0" />
+    <PackageReference Include="Tfx" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="MediatR" Version="8.1.0" />
+    <PackageReference Include="Tfx" Version="1.0.0" />
   </ItemGroup>
   
 </Project>
