Wire up all components | TFX-112 [MINICASHER] Bootstrap accounting domains

--- a/src/TfxMiniCasher.Application.Logic/TfxMiniCasher.Application.Logic.csproj
+++ b/src/TfxMiniCasher.Application.Logic/TfxMiniCasher.Application.Logic.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TfxMiniCasher.Application.Contracts\TfxMiniCasher.Application.Contracts.csproj" />
+    <ProjectReference Include="..\TfxMiniCasher.Data.Contracts\TfxMiniCasher.Data.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
