--- a/src/TfxMiniCasherWebHost/appsettings.json
+++ b/src/TfxMiniCasherWebHost/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=localhost\\TFORCEXYZMSSQL;database=tforcexy_dev;user id=sa;password=qwer1234QWER!@#$"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
