--- a/src/TfxMiniCasher.Data.Contracts/TfxMiniCasher.Data.Contracts.csproj
+++ b/src/TfxMiniCasher.Data.Contracts/TfxMiniCasher.Data.Contracts.csproj
@@ -13,4 +13,12 @@
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Tfx" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TfxMiniCasher.Domain\TfxMiniCasher.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
