--- a/src/TfxMiniCasher.Data.Repositories/TfxMiniCasher.Data.Repositories.csproj
+++ b/src/TfxMiniCasher.Data.Repositories/TfxMiniCasher.Data.Repositories.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TfxData.EntityFrameworkAdapter\TfxData.EntityFrameworkAdapter.csproj" />
     <ProjectReference Include="..\TfxMiniCasher.Data.Contracts\TfxMiniCasher.Data.Contracts.csproj" />
+    <ProjectReference Include="..\TfxMiniCasher.Domain\TfxMiniCasher.Domain.csproj" />
   </ItemGroup>
 
 </Project>
