Create account | TFX-112 [MINICASHER] Bootstrap accounting domains

--- a/src/TfxMiniCasher.WebApi/TfxMiniCasher.WebApi.csproj
+++ b/src/TfxMiniCasher.WebApi/TfxMiniCasher.WebApi.csproj
@@ -22,5 +22,9 @@
   <ItemGroup>
     <ProjectReference Include="..\TfxMiniCasher.Application.Contracts\TfxMiniCasher.Application.Contracts.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Accounting\Models\Views\" />
+  </ItemGroup>
 
 </Project>
