--- a/src/TfxMiniCasher.Data.Repositories/TfxMiniCasher.Data.Repositories.csproj
+++ b/src/TfxMiniCasher.Data.Repositories/TfxMiniCasher.Data.Repositories.csproj
@@ -14,9 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="2.0.21" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="TfxData" Version="1.0.0" />
     <PackageReference Include="TfxDependencyInjection" Version="1.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
   </ItemGroup>
 
   <ItemGroup>
