--- a/src/TfxMiniCasherWwwUI/package.json
+++ b/src/TfxMiniCasherWwwUI/package.json
@@ -28,6 +28,7 @@
     "eva-icons": "^1.1.3",
     "leaflet": "^1.7.1",
     "nebular-icons": "^1.1.0",
+    "ngx-toastr": "^13.2.0",
     "pace-js": "^1.0.2",
     "rxjs": "~6.6.0",
     "tinymce": "^4.5.7",
